roles/k3s_deploy/files/consul/consul.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "consul-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Increase the size of the maximum allowed size of the client request body
    nginx.ingress.kubernetes.io/auth-url: "https://sso.pmcd.io/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://sso.pmcd.io/oauth2/start?rd=https://$host$request_uri"

spec:
  tls:
    - hosts:
        - "consul.pmcd.io" # Host to access nextcloud
      secretName: "consul-prod-tls"
  rules:
    - host: "consul.pmcd.io"
      http:
        paths:
          - path: /
            backend:
              serviceName: "consul-server"
              servicePort: 8500
